# quorum_app_python

./: .gitignore  Makefile  README.md  env.example  pyproject.toml  pyrightconfig.json  pytest.ini  server.py  setup.sh
app/: __init__.py
app/constants/: vote_type.py
app/helpers/: formatters.py  navigation.py
app/lib/: multi_response.py
app/models/: __init__.py  base.py  bill.py  legislator.py  vote.py  vote_result.py
app/routes/: bills.py  legislators.py  vote_results.py  votes.py
app/schemas/: bill.py  legislator.py  vote.py  vote_result.py
app/services/importers/: __init__.py  base_batch_importer.py  bill_importer.py  import_result.py  legislator_importer.py  vote_importer.py  vote_result_importer.py
app/static/: style.css
app/templates/: base.html
app/templates/bills/: index.html  show.html
app/templates/legislators/: index.html  show.html
app/templates/vote_results/: index.html  show.html
app/templates/votes/: index.html  show.html
docs/: challenge.md  questions.md
scripts/: database.py  import_data.py  importer.py  server.py
settings/: __init__.py  base.py  development.py  production.py  test.py
tests/: conftest.py
tests/app/: __init__.py
tests/app/models/: __init__.py  test_bill.py  test_legislator.py  test_vote.py  test_vote_result.py
tests/app/routes/: __init__.py  test_bills.py  test_legislators.py  test_vote_results.py  test_votes.py
tests/app/schemas/: __init__.py  test_bill.py  test_legislator.py  test_vote.py  test_vote_result.py
tests/app/services/: __init__.py
tests/app/services/importers/: __init__.py  test_bill_importer.py  test_legislator_importer.py  test_vote_importer.py  test_vote_result_importer.py
tests/factories/: __init__.py  bill_factory.py  legislator_factory.py  vote_factory.py  vote_result_factory.py
